--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.tuberlin.cit</groupId>
-    <artifactId>YarnTimer</artifactId>
+    <artifactId>YarnWorkloadRunner</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
