--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,20 +1,9 @@
 akka {
-  actor {
-    provider = "akka.remote.RemoteActorRefProvider"
-  }
-
-  remote {
-    enabled-transport = ["akka.remote.netty.NettyRemoteTransport"]
-  }
+  actor.provider = "akka.remote.RemoteActorRefProvider"
+  remote.enabled-transport = ["akka.remote.netty.NettyRemoteTransport"]
 }
 
-yarn-workload-runner {
-  actors {
-    systems {
-      freamon {
-        name = "yarnWorkloadRunnerSystem"
-        actor = "freamonSender"
-      }
-    }
-  }
+yarn-workload-runner.actors.systems.freamon {
+  name = "yarnWorkloadRunnerSystem"
+  actor = "freamonSender"
 }
